welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:10: error: missing parameter type
	if(nbBiscuit=>3){
           ^