welcome.lessons.welcome.loopdowhile.Poucet.scala.code
var nbBiscuit = 0
while (!sortieTrouvee){
	do{
		avance()
		if(estSurBiscuit){
		nbBiscuit = nbBiscuit+1	
		}
	}while(!croisement)
	if(nbBiscuit=>3){
		gauche()
	}
	else{
		droite()
	}
}
